# Indice_de_densidad_del_estado

./: .gitignore  README.md  pyproject.toml
base_datos/: INEI_población.xlsx  Tasa_neta_de_matrícula_educación_secundaria_2022.xlsx  médicos_por_población_2020.xlsx
indicador_ide/: Cálculo del IDE.ipynb
resultados/: Cálculo_IDE.xlsx
