[tool.poetry]
name = "indicador-ide"
version = "0.1.0"
description = ""
authors = ["Eber <laurente.eber@outlook.com>"]
readme = "README.md"
packages = [{include = "indicador_ide"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
samplics = "^0.4.10"
numpy = "^1.26.0"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
pyreadstat = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
